refactor: adapt to geo location api changes (#56)